--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </a>
 
             <ul class="navbar__list list">
-                <li class="navbar__item">
-                    <a href="./index.html" class="navbar__link current">Студія</a></li>
+                <li class="navbar__item navbar__item--active">
+                    <a href="./index.html" class="navbar__link ">Студія</a></li>
                 <li class="navbar__item">
                     <a href="./portfolio.html" class="navbar__link">Портфоліо</a></li>
                 <li class="navbar__item">
@@ -57,13 +57,13 @@
         <section class="hero">
             <div class="hero__container container">
             <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
-            <button data-modal-open type="button" name="button" class="hero__button">Замовити послугу</button>
+            <button data-modal-open type="button" name="button" class="button">Замовити послугу</button>
            </div>
         </section>
    
 
         <!--Особливості роботи-->
-        <section class="feature__section section">
+        <section class="feature section">
         <div class="feature__container container">
              <h2 class="title-hidden">Особливості</h2>
              <ul class="feature__list list">
@@ -105,7 +105,7 @@
 </section>
 
         <!--Приклади роботи-->
-        <section class="work__section section">
+        <section class="work section">
             <div class="work__container container">
                 <h2 class="section__title">Чим ми займаємося</h2>
             <ul class="work__list list">
@@ -127,7 +127,7 @@
    
 
         <!--Команда-->
-        <section class="team__section section">
+        <section class="team section">
         <div class="team__container container">
             <h2 class="section__title">Наша команда</h2>
             <ul class="team__list list">
@@ -365,7 +365,7 @@
             <label>
             <input class="footer__email-input" type="email" name="email" placeholder="E-mail" />
             </label>
-            <button  type="submit" name="button" class="footer__email-btn">Підписатися <svg class="off-icon" width="24px" height="24px">
+            <button  type="submit" name="button" class="button">Підписатися <svg class="off-icon" width="24px" height="24px">
                 <use href="./image/icons.svg#icon-icon-send"></use>
             </svg></button>
         </form>
@@ -427,7 +427,7 @@
         </div>
 
         <div class="form__btn"> 
-            <button type="submit" name="button" class="form__batton">Відправити</button>
+            <button type="submit" name="button" class="button">Відправити</button>
 </div>
 </form>
         
