--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
                 </a>
                 <ul class="navbar__list list">
                     <li class="navbar__item">
-                        <a href="./index.html" class="navbar__link navbar__item--active">Студія</a></li>
-                    <li class="navbar__item">
+                        <a href="./index.html" class="navbar__link">Студія</a></li>
+                    <li class="navbar__item navbar__item--active">
                         <a href="./portfolio.html" class="navbar__link">Портфоліо</a></li>
                     <li class="navbar__item">
                         <a href="#" class="navbar__link">Контакти</a></li>
