--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="header">
-        <div class="header__container container">
+        <div class="container container--header">
             <nav class="navbar">
                 <a href="./index.html" class="logo">
                     <span class="logo__text">Web</span>Studio
@@ -51,15 +51,15 @@
     <main>
         <!--Герой-->
         <section class="hero">
-            <div class="hero__container container">
+            <div class="container container--hero">
                 <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
                 <button data-modal-open type="button" name="button" class="button button__primary">Замовити послугу</button>
             </div>
         </section>
 
         <!--Особливості роботи-->
-        <section class="feature section">
-            <div class="feature__container container">
+        <section class="section section--feature">
+            <div class="container">
                 <h2 class="title-hidden">Особливості</h2>
                 <ul class="feature__list list">
                     <li class="feature__item">
@@ -103,8 +103,8 @@
         </section>
 
         <!--Приклади роботи-->
-        <section class="work section">
-            <div class="work__container container">
+        <section class="section">
+            <div class="container">
                 <h2 class="section__title">Чим ми займаємося</h2>
                 <ul class="work__list list">
                     <li class="work__item">    
@@ -124,8 +124,8 @@
         </section>
 
         <!--Команда-->
-        <section class="team section">
-            <div class="team__container container">
+        <section class="section section--team">
+            <div class="container">
                 <h2 class="section__title">Наша команда</h2>
                 <ul class="team__list list">
                     <li class="team-card">
@@ -280,8 +280,8 @@
             </div>
         </section>
 
-        <section class="clients section">
-            <div class="clients__container container">
+        <section class="section">
+            <div class="container">
                 <h2 class="section__title">Постійні клієнти</h2>
                 <ul class="client__list list">
                     <li class="client__item">
@@ -333,7 +333,7 @@
 
     <!--Футер-->
     <footer class="footer">
-        <div class="footer__container container">
+        <div class="container container--footer">
             <div class="footer__wrap">
                 <a href="./index.html" class="logo logo--footer">
                     <span class="logo__text">Web</span>Studio</a>
@@ -352,7 +352,7 @@
             </div>
             <div class="footer__inner">
                 <p class="footer__header">Приєднуйтесь</p>
-                <ul class="social-network social-network__footer list">
+                <ul class="social-network social-network--footer list">
                     <li class="social-network__item">
                         <a href="" class="social-network__footer-link social-network__link">
                             <svg class="social-network__icon" width="20px" height="20px">
