--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <div class="header__container container">
+        <div class="container container--header">
             <nav class="navbar">
                 <a href="./index.html" class="logo">
                     <span class="logo__text">Web</span>Studio
@@ -47,8 +47,8 @@
     </header>
 
     <main>
-        <section class="portfolio section">
-            <div class="portfolio__container container">
+        <section class="section">
+            <div class="container">
                 <h1 class="title-hidden">Галерея робіт</h1>
                 <ul class="filters list">
                     <li class="filters__item"><button type="button" name="button" class="button button__filters">Усі</button></li>
@@ -191,7 +191,7 @@
             </div>
             <div class="footer__inner">
                 <p class="footer__header">Приєднуйтесь</p>
-                <ul class="social-network social-network__footer list">
+                <ul class="social-network social-network--footer list">
                     <li class="social-network__item">
                         <a href="" class="social-network__footer-link social-network__link">
                             <svg class="social-network__icon" width="20px" height="20px">
